testsuite/serd-tests/good/test-non-curie-uri.nt
<http://example.org/eg#s> <http://example.org/eg#p> <http://example.org/notacurie.> .
