testsuite/serd-tests/bad/bad-nt-syntax-blank-u2FF0.nt
<http://example.org/s> <http://example.org/p> _:in⿰valid .

